--- a/app/views/posts/_posts.html.haml
+++ b/app/views/posts/_posts.html.haml
@@ -3,27 +3,26 @@
 = hidden_field_tag :sort, params[:sort]
 
 %ul#post_list
-  / %tr
-  /   %th(style="width:60px;")
-  /     / column heading - click to sort
-  /     / = sortable "Sort by Date"
-  /   %th
 
   / loop through posts
-  - for post in @posts
+  - if @posts.count > 0
+    - for post in @posts
 
-    / make entire row trigger marker click
-    %li.btn.post_block{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
-      %table
-        %tr
-          %td.post_avatar_block
-            = avatar_for(post.user)
-          %td.post_content_block
-            %strong
-              = post.user.name
-            %span.timestamp
-              #{time_ago_in_words(post.created_at)} ago.
-            .post_content
-              = post.content.truncate(35, :separator => ' ')
+      / make entire row trigger marker click
+      %li.btn.post_block{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
+        %table
+          %tr
+            %td.post_avatar_block
+              = avatar_for(post.user)
+            %td.post_content_block
+              %strong
+                = post.user.name
+              %span.timestamp
+                #{time_ago_in_words(post.created_at)} ago.
+              .post_content
+                = post.content.truncate(35, :separator => ' ')
+  - else
+    %p.pull-left
+      No posts found
 
 = will_paginate @posts, class: "nexus_pagination", :inner_window => 1, :outer_window => 0
