--- a/app/views/layouts/map.html.haml
+++ b/app/views/layouts/map.html.haml
@@ -1,3 +1,5 @@
+/ this template exists so that we can render without the footer (present in application.html.haml)
+/ surely there is a better way!
 !!!
 %html
   %head
