--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
       / <haml:loud> debug(params) if Rails.env.development? </haml:loud>
 
       / :content now specified in all view - anoying, but enables nested views for 
-      / e.g. messages, feedback controllers
+      / e.g. for notifications, feedback controllers
       = yield :content
 
       / footer
