--- a/app/views/user_mailer/feedback_new_email.html.haml
+++ b/app/views/user_mailer/feedback_new_email.html.haml
@@ -4,11 +4,8 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
   %body
     %h1
-      Welcome to casenexus.com, #{@user.name}
+      New Feedback
     %p
-      You have successfully signed up to casenexus.com,
-      your email address is: #{@user.email}.
-      %br/
+      You have new feedback on casenexus from #{@user_from.name}
     %p
-      To login to the site, just follow this link: #{@url}.
-    %p Thanks for joining and have a great day!
+      To view this feedback, follow this link: #{@url}.
