--- a/app/views/user_mailer/feedback_req_email.html.haml
+++ b/app/views/user_mailer/feedback_req_email.html.haml
@@ -4,11 +4,9 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
   %body
     %h1
-      Welcome to casenexus.com, #{@user.name}
+      Feedback Request
     %p
-      You have successfully signed up to casenexus.com,
-      your email address is: #{@user.email}.
+      Feedback on a case has been requested by {@user_from.name}
       %br/
     %p
-      To login to the site, just follow this link: #{@url}.
-    %p Thanks for joining and have a great day!
+      Complete a feedback form for this user now #{@url}.
