--- a/app/views/user_mailer/feedback_req_email.text.erb
+++ b/app/views/user_mailer/feedback_req_email.text.erb
@@ -1,9 +1,6 @@
-Welcome to casenexus.com, <%= @user.name %>
+Feedback Request
 ===============================================
- 
-You have successfully signed up to casenexus.com,
-your email is: <%= @user.email %>.
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+
+Feedback on a case has been requested by {@user_from.name}
+
+Complete a feedback form for this user now #{@url}.
