--- a/app/views/user_mailer/message_email.html.haml
+++ b/app/views/user_mailer/message_email.html.haml
@@ -4,10 +4,8 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
   %body
     %h1
-      You have been sent a message on casenexus.com
+      New Message
     %p
-      Your email address is #{@user.email}.
-      %br/
+      You have a new message from {@user_from.name}
     %p
-      To login to the site, just follow this link: #{@url}.
-    %p have a great day!
+      To view this message, click here #{@url}.
