--- a/app/views/user_mailer/message_email.text.erb
+++ b/app/views/user_mailer/message_email.text.erb
@@ -1,8 +1,6 @@
-You have been sent a message on casenexus.com
+New Message
 ===============================================
- 
-Your email is <%= @user.email %>.
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-have a great day!
+
+You have a new message from {@user_from.name}
+  
+To view this message, click here #{@url}.
