--- a/app/views/cases/_cas.html.haml
+++ b/app/views/cases/_cas.html.haml
@@ -8,7 +8,7 @@
           = avatar_for(@case_user)
         %td.case_content_block
           %strong
-            = link_to @case_user.name, "mailto:"+cas.email
+            = @case_user.name
           %span.timestamp
             #{time_ago_in_words(cas.created_at)} ago.
           %div
