--- a/app/views/user_mailer/feedback_new_email.text.erb
+++ b/app/views/user_mailer/feedback_new_email.text.erb
@@ -1,9 +1,6 @@
-Welcome to casenexus.com, <%= @user.name %>
+New Feedback
 ===============================================
+
+You have new feedback on casenexus from #{@user_from.name}.
  
-You have successfully signed up to casenexus.com,
-your email is: <%= @user.email %>.
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+To view this feedback, follow this link: #{@url}.
