tie up notification emails - still need to make notifications match emails

--- a/app/views/notifications/_modal_feedback_req.html.haml
+++ b/app/views/notifications/_modal_feedback_req.html.haml
@@ -17,13 +17,13 @@
 
         #feedback_req_form
           .field      
-            = f.text_field :feedback_req_date, placeholder: "Date", id: "datepicker", tabindex: "3"
+            = f.text_field :event_date, placeholder: "Date", id: "datepicker", tabindex: "3"
           .field
             = f.text_area :content, placeholder: "Case Subject...", rows: '5'
 
             = f.hidden_field :user_id, :value => @user.id
             = f.hidden_field :sender_id, :value => current_user.id
-            = f.hidden_field :ntype, :value => "message"
+            = f.hidden_field :ntype, :value => "feedback_req"
 
     .modal-footer
       %a.btn{"data-dismiss" => "modal", :href => "#"} Close
