--- a/app/views/notifications/create_feedback_req.js.erb
+++ b/app/views/notifications/create_feedback_req.js.erb
@@ -1,5 +1,19 @@
-//hide form, remove form, load flash html, show flash
-$('#feedback_req_form').hide('slow', function () {
-	$("#flash_notifications").html("<%= escape_javascript(render :partial => 'layouts/flash' , :locals => { :flash => flash }).html_safe %>");
-	$("#flash_notifications").show("fast");
-});
+//delay 200ms to allow hide modal animation,
+setTimeout(function(){
+
+	// hide modal
+  $("#modal_feedback_req").modal('hide');
+
+  // update application flash html
+  $("#flash_application").html("<%= escape_javascript(render :partial => 'layouts/flash' , :locals => { :flash => flash }).html_safe %>");
+	
+	// fade in application flash
+	$("#flash_application").fadeIn("fast");
+
+	// changes write post button to disabled!
+	$('#feedback_req_show').addClass("disabled")
+
+	// changes write post button to disabled!
+	$('#feedback_req_show_text').html("Request Sent")
+
+}, 200);
