--- a/app/views/user_mailer/message_email.text.erb
+++ b/app/views/user_mailer/message_email.text.erb
@@ -1,6 +1,8 @@
 New Message
 ===============================================
 
-You have a new message from {@user_from.name}
+You have a new message from <%= @user_from.name %>
+
+Message <%= @message %>
   
-To view this message, click here #{@url}.
+To view this message, click here <%= link_to @url, @url %>.
