--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -95,13 +95,15 @@
       / send message button
       %a#message_show.btn.btn-inverse
         %i.icon-comment.icon-white
-        Message
+        %span#message_show_text
+          Message
 
 
       / send feedback req button
       %a#feedback_req_show.btn.btn-inverse
         %i.icon-refresh.icon-white
-        Request Feedback  
+        %span#feedback_req_show_text
+          Request Feedback  
 
 
       / send feedback button
